[package]
name = 'pallet-fixed-swap'
version = "0.1.0"
license = "Apache-2.0"
authors = ['Bounce']
edition = '2018'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-core = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }
orml-tokens = { default-features = false }
orml-traits = { default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	"orml-tokens/std",
	"orml-traits/std",
	"sp-std/std",
	"sp-runtime/std",
]
